--- a/client/package.json
+++ b/client/package.json
@@ -1,15 +1,12 @@
 {
-  "name": "server",
+  "name": "client",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "Samet Cimen",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.17.1",
-    "nodemon": "^2.0.12"
-  }
+  "license": "ISC"
 }
