--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express-fileupload": "^1.2.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "nodemailer": "^6.6.3",
     "nodemon": "^2.0.12",
     "npm": "^7.20.5",
     "pg": "^8.7.1"
